src/less/main.less
@black: #222222;
@white: #fbfbfb;
@lightgreen: #95eb95;
@darkgreen: #3aa53a;
@facebookBlue: #5979bd;
@quick: 0.2s;
@slow: 0.6s;

.transition(@speed: @quick) {
  transition: all @speed ease-in-out;
}
.box-shadow(@blur: 25px) {
  box-shadow: 0 2px @blur 0 rgba(0, 0, 0, 0.6);
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background-color: @white;
  color: @black;
  font-family: "Montserrat", "Helvetica Neue", sans-serif;
  font-weight: 300;
}

img {
  max-width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Rammetto One";

  &.inline {
    display: inline-block;
    margin: 0;
  }
}

h1,
h2,
h3 {
  border-bottom: 4px solid @lightgreen;
}

hr {
  border: 0;
  border-bottom: 1px solid @darkgreen;
  width: 80%;
}

a,
a:focus,
a:active,
a:visited {
  .transition;
  color: @darkgreen;

  &:hover {
    color: lighten(@darkgreen, 20%);
  }
}

ul {
  list-style-type: square;
}

p.two-columns {
  column-count: 2;
  text-align: justify;
}

iframe {
  border: none;
}

#spotify-plugin {
  height: 380px;
  min-width: 300px;
  max-width: 95%;
  width: 50%;
  align-self: center;
}

#facebook-icon {
  position: fixed;
  bottom: 0.5rem;
  left: 1rem;
  font-size: 3rem;
  @media (max-width: 768px) {
    font-size: 2rem;
  }
  z-index: 10;
  text-shadow: @black 1px 1px 3px;
  color: @facebookBlue;
  &:hover {
    color: lighten(@facebookBlue, 20%);
  }
}

.caption {
  text-align: center;
  padding: 1rem;
  color: gray;
}

.divider-img-wrapper {
  width: 70%;
  @media (max-width: 768px) {
    width: 100%;
  }
  height: 400px;
  margin: 0 auto;
  border-radius: 1rem;

  background-position: center;
  background-size: cover;
  position: relative;

  .box-shadow;

  .attribution {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.8);
    color: @white;
    text-align: right;
    padding: 1rem;
    bottom: 0;
    right: 0;
    font-size: 0.8rem;
    border-radius: 1rem 0 1rem 0;

    &::before {
      content: "📷 ";
    }
  }
}

.divider-img-wrapper-full {
  .divider-img-wrapper;
  .attribution {
    border-radius: 1rem 0 0 0;
  }
  border-radius: 0;
  width: 100%;
  height: 800px;
  @media (max-width: 768px) {
    height: 500px;
  }
}

.wrapper {
  height: 100%;
  max-width: 100%;
  -js-display: flex; // Try fixing IE
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.main {
  -js-display: flex; // Try fixing IE
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  > *:not(.divider-img-wrapper-full):not(.countdown-wrapper-full) {
    max-width: 50%;
    @media (max-width: 768px) {
      max-width: 80%;
    }
  }

  .directions {
    max-width: 80%;
    -js-display: flex; // Try fixing IE
    display: flex;
    justify-content: center;
    align-items: center;
    @media (max-width: 768px) {
      flex-direction: column;
    }

    > div {
      padding: 0 1rem;
    }

    > #map,
    iframe {
      border: none;
      padding: 0;

      min-width: 500px;
      min-height: 500px;
      width: 100%;
      height: 100%;
      @media (max-width: 768px) {
        min-height: 300px;
        min-width: 100%;
        height: 300px;
      }
    }
  }
}

.camp-map {
  max-width: 90% !important;
  margin-bottom: 2rem;
  .box-shadow;
}

.section {
  padding: 1rem;
  margin: 2rem 0;
}

.program {
  display: grid;
  grid-template-columns: minmax(50vw, 1fr);

  h1 {
    font-size: 1.5rem;
  }
  @media (min-width: 768px) {
    h1 {
      font-size: 2rem;
    }
  }
  .event {
    position: relative;
    padding: 0.5rem;
    font-size: 1.25rem;
    @media (min-width: 768px) {
      font-size: 1.5rem;
    }

    &.time {
      font-size: 2rem;
      width: 1%;
    }
  }
}

.artists {
  min-width: 60%;
  @media (max-width: 768px) {
    min-width: 80%;
  }

  -js-display: flex; // Try fixing IE
  display: flex;
  flex-direction: column;
}

.artists-list {
  width: 100%;
  -js-display: flex; // Try fixing IE
  display: flex;
  flex-direction: column;
  justify-content: center;

  .artist {
    position: relative;
    .transition;

    padding: 0 1rem 1rem 1rem;
    margin: 0.5rem auto;
    width: 80%;
    height: 250px;
    @media (min-width: 768px) {
      height: 300px;
    }

    color: @white;
    text-shadow: @black 1px 1px 10px;
    .box-shadow(10px);

    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

    cursor: pointer;

    &.open {
      @media (min-width: 768px) {
        height: 400px;
      }
    }

    h3 {
      display: inline-block;
    }
  }

  .artist-bio {
    width: 80%;
    margin: auto;
    display: none;
  }

  .show-more-button {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 0.5rem;
  }
}

@media (min-width: 768px) {
  .artist:hover,
  .event:hover {
    .show-more-button {
      transform: translateY(3px);
    }
  }
}

.event {
  cursor: pointer;

  font-size: 1.5rem;

  display: grid;
  grid-template-columns: 3fr 8fr 1fr;
  max-width: 100%;

  .show-more-button {
    text-align: right;
  }
}

.event-info {
  padding: 0 1rem;
  display: none;
  font-size: 1rem;

  table {
    font-size: 1.25rem;
    line-height: 1.5;
    border-collapse: collapse;

    td {
      padding: 0.5rem;
    }
  }
}

.show-more-button {
  text-align: center;
  font-size: 1.5rem;
  color: @white;
  text-shadow: @black 1px 2px 0px;

  cursor: pointer;

  .transition;

  &:not(.open)::after {
    content: "👇";
  }
  &.open::after {
    content: "☝️";
  }
}

#header {
  min-height: 500px;
  height: 100vh;
  width: 100%;
  position: relative;

  -js-display: flex; // Try fixing IE
  display: flex;
  justify-content: center;
  align-items: center;
  .box-shadow;

  // margin-bottom: 1rem; Include when there's text, not a picture, just below the logo banner

  overflow: hidden;
  background-color: #000000;

  .date {
    color: @white;
    position: absolute;
    bottom: 5rem;
    @media (min-width: 768px) {
      font-size: 3rem;
    }
  }

  #logo {
    position: absolute;
    height: 80%;
    width: 50%;
    @media (max-width: 768px) {
      height: 90%;
      width: 80%;
    }

    background-image: url("/images/logo-2019.png");
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
  }
}

footer {
  padding: 1rem;
  text-align: center;
}

.countdown-wrapper-full {
  background: black;
  color: white;
  padding-bottom: 3rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
#countdown {
  width: 70%;
  @media (max-width: 768px) {
    width: 90%;
  }
}

.ie {
  display: none;
}
@media screen and (-ms-high-contrast: active),
  screen and (-ms-high-contrast: none) {
  .ie {
    display: block;
  }
}
.ie-notice {
  position: absolute;
  z-index: 10;
  top: 0;
  left: 0;
  right: 0;
  padding: 1rem;
  background-color: rgba(149, 235, 149, 0.95);
}

